Was Just Finishing up.Probably refactor a bit next

--- a/API/template/uploadPDF.html
+++ b/API/template/uploadPDF.html
@@ -1,6 +1,6 @@
 <html>
    <body>
-      <form action = "/uploadPDF" method = "POST" 
+      <form action = "/textExtractor" method = "POST" 
          enctype = "multipart/form-data">
          <input type = "file" name = "file" />
          <input type = "submit"/>
